Update package.json with main and engines fields
Added 'main' entry point and 'engines' field for Node.js version.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "mrkt-alert-sniper",
   "version": "1.0.0",
-  "private": true,
-  "type": "module",
+  "main": "index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node index.js"
   }
 }
+"engines": { "node": "18.x" }
