--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mrkt-alert-sniper",
   "version": "1.0.0",
+  "private": true,
   "main": "index.js",
-  "engines": {
-    "node": "18.x"
-  },
   "scripts": {
     "start": "node index.js"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
-"engines": { "node": "18.x" }
